--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,13 @@
 	<classpathentry kind="lib" path="D:/Users/Jelle Schukken/Desktop/Programming/TUe Workspace/LWJGL3 + Assets/lwjgl-2.9.1/jar/lwjgl_util.jar"/>
 	<classpathentry kind="lib" path="D:/Users/Jelle Schukken/Desktop/Programming/TUe Workspace/LWJGL3 + Assets/lwjgl-2.9.1/jar/PNGDecoder.jar"/>
 	<classpathentry kind="lib" path="D:/Users/Jelle Schukken/Desktop/Programming/TUe Workspace/LWJGL3 + Assets/lwjgl-2.9.1/jar/slick-util.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Jelle Schukken/Desktop/Programming/TUe Workspace/VoxelEngine/LWJGL3 + Assets/lwjgl-2.9.1/jar/lwjgl.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="D:/Users/Jelle Schukken/Desktop/Programming/TUe Workspace/VoxelEngine/LWJGL3 + Assets/lwjgl-2.9.1/native/windows"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/Users/Jelle Schukken/Desktop/Programming/TUe Workspace/VoxelEngine/LWJGL3 + Assets/lwjgl-2.9.1/jar/lwjgl_util.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Jelle Schukken/Desktop/Programming/TUe Workspace/VoxelEngine/LWJGL3 + Assets/lwjgl-2.9.1/jar/PNGDecoder.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Jelle Schukken/Desktop/Programming/TUe Workspace/VoxelEngine/LWJGL3 + Assets/lwjgl-2.9.1/jar/slick-util.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
