lots of small stuff (see descriptiion)
Fixed coordinates (might have turned/mirrored, but who cares)
Changed Song (credit; Tom Vergouwen)
Added class for the to be implemented pathfinding

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,12 +1,1 @@
-/Entitys/
-/Flashlight/
-/GameEngine/
-/Models/
-/RenderEngine/
-/Shaders/
-/Textures/
-/ToolBox/
-/KNearest/
-/Entities/
-/Map/
-/res/
+/PathFinding/
