--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,12 +1,4 @@
-/Entitys/
-/Flashlight/
-/GameEngine/
-/Models/
+/Guis/
 /RenderEngine/
-/Shaders/
-/Textures/
-/ToolBox/
-/KNearest/
-/Entities/
-/Map/
+/Flashlight/
 /res/
