--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,10 +1,8 @@
-/PathFinding/
-/Flashlight/
-/Map/
-/Entities/
-/KNearest/
-/RenderEngine/
-/ToolBox/
-/res/
-/GameEngine/
 /Menu/
+/PathFinding/
+/song.wav
+/Guis/
+/Flashlight/
+/RenderEngine/
+/Shaders/
+/ToolBox/
