--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,10 +1,11 @@
-/PathFinding/
-/Flashlight/
-/Map/
 /Entities/
-/KNearest/
-/RenderEngine/
 /ToolBox/
-/res/
+/Flashlight/
 /GameEngine/
+/KNearest/
+/Map/
 /Menu/
+/PathFinding/
+/RenderEngine/
+/res/
+/song.wav
