Fixed KNearest working merging

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,8 +1,14 @@
-/res/
 /Entities/
 /Flashlight/
 /GameEngine/
+/KNearest/
 /Map/
 /Menu/
-/ToolBox/
+/Models/
 /PathFinding/
+/RenderEngine/
+/Shaders/
+/Textures/
+/ToolBox/
+/res/
+/song.wav
