--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,11 +1,15 @@
 /Entities/
 /Flashlight/
 /GameEngine/
+/Guis/
 /KNearest/
+/Map/
 /Menu/
+/Models/
+/PathFinding/
+/RenderEngine/
+/Shaders/
+/Textures/
 /ToolBox/
 /res/
-/Guis/
-/RenderEngine/
-/Map/
-/PathFinding/
+/song.wav
