--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -2,3 +2,13 @@
 /Shadows/
 /RenderEngine/
 /Shaders/
+/Flashlight/
+/Entities/
+/KNearest/
+/Map/
+/Menu/
+/Models/
+/PathFinding/
+/Textures/
+/ToolBox/
+/res/
