--- a/.classpath
+++ b/.classpath
@@ -2,14 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="resources"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="LWJGL2.9.1/lwjgl-2.9.1/jar/lwjgl_util.jar"/>
-	<classpathentry kind="lib" path="LWJGL2.9.1/lwjgl-2.9.1/jar/lwjgl.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="VoxelEngine/LWJGL2.9.1/lwjgl-2.9.1/native/windows"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="LWJGL2.9.1/lwjgl-2.9.1/jar/PNGDecoder.jar"/>
-	<classpathentry kind="lib" path="LWJGL2.9.1/lwjgl-2.9.1/jar/slick-util.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry exported="true" kind="lib" path="LWJGL2.9.1/lwjgl-2.9.1/jar/lwjgl_util.jar"/>
+	<classpathentry exported="true" kind="lib" path="LWJGL2.9.1/lwjgl-2.9.1/jar/lwjgl.jar"/>
+	<classpathentry exported="true" kind="lib" path="LWJGL2.9.1/lwjgl-2.9.1/jar/PNGDecoder.jar"/>
+	<classpathentry exported="true" kind="lib" path="LWJGL2.9.1/lwjgl-2.9.1/jar/slick-util.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
