--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="resources"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="VoxelEngine/LWJGL2.9.1/lwjgl-2.9.1/native/windows"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="LWJGL2.9.1/lwjgl-2.9.1/jar/lwjgl_util.jar"/>
 	<classpathentry exported="true" kind="lib" path="LWJGL2.9.1/lwjgl-2.9.1/jar/lwjgl.jar"/>
 	<classpathentry exported="true" kind="lib" path="LWJGL2.9.1/lwjgl-2.9.1/jar/PNGDecoder.jar"/>
